# parallax

./: .gitignore  pyproject.toml
docs/: architecture.md  cluster_and_node_assignment_spec.md  custom_model_source_spec.md  knowledge_service_design.md  model_compatibility.md  settings_page_spec.md
docs/user_guide/: quick_start.md
profiles/runtime/: local-fast.json  mac-local.json  remote.json
src/backend/: main.py
src/backend/server/: chat_memory.py  custom_models.py  knowledge_client.py  node_lifecycle.py  node_management.py  request_handler.py  rpc_connection_handler.py  run_store.py  scheduler_manage.py  semantic_retrieval.py  server_args.py  settings_store.py  static_config.py  tool_runtime.py
src/backend/server/tools/: __init__.py  base.py  registry.py
src/backend/server/tools/plugins/: __init__.py  files.py  parallax.py  web.py
src/frontend/: package-lock.json  vite.config.ts
src/frontend/src/components/brand/: icon.tsx  (+1 more)
src/frontend/src/pages/: chat.tsx  join.tsx  knowledge.tsx  nodes.tsx  runs.tsx  settings.tsx  setup.tsx
src/frontend/src/router/: main.tsx
src/frontend/src/services/: api.ts  chat.tsx  cluster.tsx  llm-providers.ts
src/frontend/src/themes/: index.tsx  palette.ts
src/knowledge_service/: __init__.py  app.py  chunking.py  config.py  embedding.py  models.py  search.py  source_storage.py  store.py
src/knowledge_service/ingest/: local_files.py  urls.py
src/parallax/: cli.py  launch.py
src/parallax/p2p/: server.py
src/parallax/server/: cache_manager.py  http_server.py  scheduler.py  server_args.py  server_info.py  shard_loader.py
src/parallax/server/executor/: base_executor.py  factory.py  mlx_executor.py
src/parallax/utils/: shared_state.py  utils.py
src/parallax_utils/: logging_config.py  runtime_profiles.py
src/scheduling/: layer_allocation.py  node.py  node_management.py  scheduler.py
tests/: test_openai_responses_api.py  test_tool_runtime.py
(+14 files in other folders)
